<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PantallaInsercionPokemonMundo">


    <EditText
        android:id="@+id/txtNombreMundo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombrePokemonMundo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtTipoMundo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tipoPokemonMundo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtXMundo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/xPokemonMundo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtYMundo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/yPokemonMundo"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btInsertarPokemonMundo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/guardarPokemonMundo" />
</LinearLayout>